# dpdk

./: .coderabbit.yaml  .mailmap  .travis.yml  CLAUDE.md  MAINTAINERS  meson.build
.ci/: linux-build.sh  linux-setup.sh
.github/workflows/: build.yml
app/: meson.build
app/graph/: graph.c  utils.c
app/test/: meson.build  process.h  test.h  test_bpf.c  test_common.c  test_devargs.c  test_eal_flags.c  test_hash.c  test_mbuf.c  test_ring_perf.c  test_rwlock.c  test_soring_stress_impl.h  test_spinlock.c  test_vdev.c  virtual_pmd.c
app/test-bbdev/: main.h  test_bbdev_vector.c
app/test-compress-perf/: comp_perf_options_parse.c
app/test-crypto-perf/: cperf_options_parsing.c  cperf_test_vector_parsing.c
app/test-dma-perf/: main.c
app/test-eventdev/: evt_test.h
app/test-fib/: main.c
app/test-flow-perf/: main.c
app/test-mldev/: ml_options.c  ml_test.h
app/test-pmd/: cmdline.c  config.c  csumonly.c  testpmd.h  util.c
buildtools/: check-symbols.py  check-symbols.sh  gen-version-map.py  meson.build
buildtools/chkincs/: Makefile  meson.build
config/: meson.build
devtools/: analyze-patch.py  check-spdx-tag.sh  checkpatches.sh  libabigail.abignore  test-meson-builds.sh  test-null.sh  test-vhost.sh  words-case.txt
devtools/cocci/: strtok.cocci
doc/api/: doxy-api.conf.in
drivers/: meson.build
examples/fips_validation/: meson.build
examples/ipsec-secgw/: meson.build
examples/l2fwd-cat/: meson.build
examples/l2fwd-crypto/: main.c
examples/vhost/: main.c  (+3 more)
lib/: meson.build
linux-headers/uapi/: meson.build
linux-headers/uapi/linux/: types.h
(+466 files in other folders)
